--- a/index.html
+++ b/index.html
@@ -5,13 +5,60 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>SCRUM</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.css">
     <link rel="stylesheet" href="res/css/styles.css">
 </head>
 <body>
 
-    <div class="wrapper">
-        
-    </div>
+    <article>
+        <header>
+            <h1>SCRUM</h1>
+        </header>
+        <section>
+            <p>
+                SCRUM er et projekt organiserings værktøj som er udviklet til fleksibel softwareudvikling. Helt grundlæggende går det ud på at opdele et projekt i mange små faser/delmål, som kan ses som små opgaver, som til sammen udgøre hele projektet. De små faser bliver løbende evalueret i hele projektets afsatte tid. Faserne opdeles yderligere, i små detaljerede opgaver, som bør kunne udføres på under 18 timer. 
+                Dette kan gøre det muligt at udvikle på mange dele af et komplekst projekt, på samme tid. SCRUM giver samtidig plads til rettelse/ændringer/forbedringer løbende.
+            </p>
+
+            <h2>Roller i SCRUM</h2>
+            <p>SCRUM ligger op til at folk skal opdeles i specifikke roller, som varetager forskellige dele af projektet og SCRUM organiseringen.</p>
+            <img src="res/pics/eksekvering-ny-1000x399.png" alt="scrum">
+
+            <br>
+            <h3>Product Owner</h3>
+            <ul>
+                <li>Holder styr på krav og behov til projektet.</li>
+                <li>Godkender løbende arbejdet.</li>
+                <li>Evaluere løbende arbejdet.</li>
+            </ul>
+
+            <br>
+            <h3>SCRUM Team</h3>
+            <ul>
+                <li>Kan være forskellige udviklere (backend, frontend, designere, testere osv.)</li>
+                <li>Sørger for at imødekomme krav og behov fra Product Owner’en</li>
+            </ul>
+
+            <br>
+            <h3>SCRUM Master</h3>
+            <ul>
+                <li>Neutral facilitator.</li>
+                <li>Sørger for at scrum organiseringen overholdes.</li>
+                <li>Planlægger alle møder.</li>
+                <li>Planlægger agendaen på alle møder.</li>
+            </ul>
+
+            <img src="res/pics/sidsten.png" alt="overview">
+
+
+            <footer>
+                Side henvisninger: <br>
+                <a href="https://danskprojektledelse.dk/community/introduktion-til-scrum/">Dansk Projektledelse - Scrum intro</a> <br>
+                <a href="https://www.teknologisk.dk/kurser/agile-projekter-og-scrum/hvad-er-agile-og-scrum/35807">Teknologisk Insitut - Agile og Scrum</a> <br>
+                2018 - Michael Koch
+            </footer>
+        </section>
+    </article>
     
 </body>
 </html>
